<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/game_bg">

    <!-- LEFT PANEL -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/panel_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back_arrow"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_star"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_star"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_star"/>
            </LinearLayout>

        </LinearLayout>

        <!-- PROGRESS -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/progressCircle"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="100"
                android:progress="45"
                android:rotation="270"
                android:padding="16dp"
                android:progressDrawable="@drawable/circular_progress"/>

            <TextView
                android:id="@+id/txtPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="45%"
                android:textColor="@color/game_text"
                android:textSize="26sp"
                android:textStyle="bold"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_levels"
            android:textColor="@color/game_text"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <!-- RIGHT PANEL -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- ROW 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_1"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stars_three"
                        android:textColor="@color/star_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_2"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stars_two"
                        android:textColor="@color/star_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_3"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stars_one"
                        android:textColor="@color/star_color"/>
                </LinearLayout>

            </LinearLayout>

            <!-- ROW 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_4"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_locked"
                        android:textColor="@color/locked_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_5"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_locked"
                        android:textColor="@color/locked_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_6"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_locked"
                        android:textColor="@color/locked_text"/>
                </LinearLayout>

            </LinearLayout>
            <!-- ROW 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center">

                <!-- LEVEL 7 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_7"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_locked"
                        android:textColor="@color/locked_text"/>
                </LinearLayout>

                <!-- LEVEL 8 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_8"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_locked"
                        android:textColor="@color/locked_text"/>
                </LinearLayout>

                <!-- LEVEL 9 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:background="@drawable/level_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_9"
                        android:textColor="@color/game_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_locked"
                        android:textColor="@color/locked_text"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
